Fixed post title overflow on non-breaking words

--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -151,6 +151,7 @@ body {
             font-size: 1rem;
             color: $accent-fg;
             color: $accent-bg;
+            word-break: break-all;
         }
 
         .post-author {
@@ -167,6 +168,7 @@ body {
 
     .post-title {
         font-size: 1.4rem;
+        word-break: break-all;
     }
 
     .post-author {
